[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to various Advent of Code Riddles."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=2.0",
    # Add other runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "ruff",  # Linter
    "commitizen",  # Commit message standardization
    # "pytest",  # Testing framework
    # Add other dev dependencies here
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
