[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to various Advent of Code Riddles."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=2.0",
    # Add other runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pre-commit", # For managing Git hooks (optional)
    "readme_renderer[md]",
    "pre-commit",
    "pydoclint",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pytest",
    "pytest-cov",
    "ruff"
]

[tool.pydoclint]
style = "google"
exclude = '\.git'
allow-init-docstring = true

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
exclude = ["thirdParty/", "*.pyi"]

[tool.ruff.format]
docstring-code-format = true
# docstring-code-line-length = 88

[tool.ruff.lint]
preview = true

external = [
    "DOC", # pydoclint
]

select = [
    "A",
    "ANN", # Enforce type hints
    "C", # Flags overly complex functions
    "D", # Encourages proper documentation
    "DOC", # Pydocstyle (docs best practices)
    "E", # Enforces basic style (e.g., indentation, line breaks)
    "F", # Detects undefined variables, imports, syntax errors
    "G", # flake8-logging
    "FURB", # Encourages f-strings (for Python 3.6+)
    "I", # Ensures proper import sorting
    "N", # Enforces consistent function/class naming
    "NPY", # Best practices for NumPy usage (if applicable)
    "PD", # pandas vet
    "PERF",
    "PIE", # Flags unnecessary lambda expressions, etc.
    "PT", # Best practices for testing (if using pytest)
    "PTH", # Encourages pathlib over os.path
    "PGH", # pygrep
    "PYI", # PyPI
    "Q", # quotes
    "RET", # Detects unnecessary return statements & refactors returns
    "RUF", # General Ruff improvements
    "UP", # Encourages modern Python syntax
    "SIM", # Flags redundant expressions & improves readability
    "W", # Enforces basic style (e.g., indentation, line breaks)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly]
project-includes = ["src/bitbully"]
project-excludes = [
    "**/thirdParty/**/*",
    "**/*.pyi",
]
python-version = "3.10.0"
ignore-missing-imports = ["*"]